# Decision-tree-2

./: .gitignore  README.md
Binaries/: daily-total-female-births.csv
Binaries/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Decision_tree_2  build.ninja  cmake_install.cmake
Binaries/Debug/.cmake/api/v1/reply/: cache-v2-8f94d0bdc9da82062cdf.json  cmakeFiles-v1-49053afc97f1703c626e.json  codemodel-v2-746aa60818bb0b9ad7d1.json  (+2 more)
Binaries/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  Decision_tree_2  build.ninja  cmake_install.cmake
ClionProject/: Decision_tree_2.run.xml
Source/: CMakeLists.txt  CMakePresets.json  main.cpp
Source/DataContainers/: Table.h  TableView.h
Source/DataContainers/TableTraits/: AbstractTableRowAndColumn.h  TableColumn.h  TableRow.h  TableTag.h
Source/DataContainers/Utils/: TableUtils.h
Source/MachineLearning/: RegressionModel.cpp  RegressionModel.h
Source/MachineLearning/Datasets/: SupervisedLearningDataset.h  SupervisedLearningDatasetView.h
Source/MachineLearning/DecisionTrees/: DecisionTreeRegressor.cpp  DecisionTreeRegressor.h
Source/MachineLearning/Ensembles/: AdaBoostRegressor.cpp  AdaBoostRegressor.h  RandomForestRegressor.cpp  RandomForestRegressor.h
Source/MachineLearning/Utils/: SupervisedLearningUtils.cpp  SupervisedLearningUtils.h  TimeSeriesForecastingUtils.cpp  TimeSeriesForecastingUtils.h
Source/RandomGenerators/: RegularRandom.cpp  RegularRandom.h  ThreadSafeRandom.cpp  ThreadSafeRandom.h
Source/RangesUtils/: ToVectorRangeAdaptor.h
Source/StringUtils/: Trim.cpp  Trim.h
(+5 files in other folders)
